# hermes-control-plane

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: main.py  models.py  utils.py
api/app/core/: settings.py
api/app/services/: __init__.py  config_service.py  cron_service.py  diagnostics_service.py  env_service.py  gateway_service.py  hermes_adapter.py  mcp_service.py  memory_service.py  plugin_service.py  provider_service.py  run_service.py  runtime_registry.py  security_service.py  session_service.py  skill_service.py  tool_service.py  workspace_service.py
api/tests/: test_agent_config_api.py  test_ci_hardening.py  test_config_ui_skeleton.py  test_cron_api.py  test_dashboard_api_contracts.py  test_diagnostics_api.py  test_gateway_api.py  test_health.py  test_mcp_api.py  test_memory_api.py  test_plugin_api.py  test_provider_auth_readiness_ui.py  test_provider_catalog_api.py  test_resilience.py  test_route_manifest_integration.py  test_route_manifest_schema_hardening.py  test_route_registry_hardening.py  test_runs_api.py  test_runtime_registry.py  test_security_api.py  test_sessions_api.py  test_shared_route_validator.py  test_skills_api.py  test_tools_api.py  test_ui_smoke_hardening.py  test_utils.py  test_workspace_api.py
deploy/: .env.example  Dockerfile
docs/plans/: 2026-04-23-phase1.md
web/: package-lock.json  package.json  route-manifest.json  vite.config.ts
web/scripts/: check-bundle.mjs  check-routes.mjs
web/src/: App.tsx  index.css  main.tsx  routeManifestValidator.shared.d.ts  (+3 more)
(+26 files in other folders)
